<resources>
    <string name="app_name">Food Runner</string>
    <string name="home">Home</string>
    <string name="myProfile">My Profile</string>
    <string name="favourites">Favorites</string>
    <string name="Faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="shared_preferences">Food Preferences</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
</resources>
