<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/MyProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/myProfile" />

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favourites" />

        <item
            android:id="@+id/OrderHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/Faqs"
            android:icon="@drawable/ic_faq"
            android:title="@string/Faqs" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>